[package]
name = "axum_web_server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tracing-subscriber = "0.3.17"
tracing = "0.1"
maplit = "1.0.2"
axum="0.6.16"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
